k8s/apps/smart-home-system-api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-home-system-api
spec:
  selector:
    app: smart-home-system-api
  ports:
  - port: 5000
    targetPort: 5000
